# rocket_api_example

./: .env  Cargo.toml
migrations/2023-04-19-202039_users/: up.sql
migrations/2023-04-19-202118_todos/: up.sql
src/: main.rs  schema.rs
src/catchers/: mod.rs
src/config/: db.rs
src/consts/: mod.rs
src/models/: mod.rs  todos.rs  user.rs
src/routes/: todos.rs  user.rs
src/utils/: jwt.rs
